--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_173.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_173.jrxml
@@ -22,14 +22,14 @@
 	<title>
 		<band height="79" splitType="Stretch">
 			<rectangle>
-				<reportElement x="-21" y="-21" width="595" height="100" forecolor="#7D933C" backcolor="#7D933C" uuid="8576728e-6c00-4bcd-af63-bb1ee7413ae1"/>
+				<reportElement x="-21" y="-21" width="595" height="100" forecolor="#009933" backcolor="#009933" uuid="8576728e-6c00-4bcd-af63-bb1ee7413ae1"/>
 			</rectangle>
 			<staticText>
 				<reportElement x="0" y="12" width="555" height="25" forecolor="#FFFFFF" uuid="213e4aa4-810e-4527-88d6-53e257dfdefe"/>
 				<textElement textAlignment="Center" markup="none">
 					<font size="15" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Elección de Delegados 2022-2026]]></text>
+				<text><![CDATA[Elección de Delegados]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="47" width="555" height="20" forecolor="#FFFFFF" uuid="a06543bd-272c-4747-92dc-2b4826fca60c"/>
@@ -67,14 +67,14 @@
 				<text><![CDATA[Zonal Electoral No.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="305" y="5" width="29" height="14" forecolor="#00834C" uuid="b4a13db9-6c77-46c6-bc27-9cc2d17814f3"/>
+				<reportElement x="299" y="5" width="29" height="14" forecolor="#00834C" uuid="b4a13db9-6c77-46c6-bc27-9cc2d17814f3"/>
 				<textElement markup="none">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Fecha]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="431" y="5" width="26" height="14" forecolor="#00834C" uuid="725c0ada-c6e3-4ee5-95e3-b4854c138a4c"/>
+				<reportElement x="432" y="5" width="26" height="14" forecolor="#00834C" uuid="725c0ada-c6e3-4ee5-95e3-b4854c138a4c"/>
 				<textElement markup="none">
 					<font size="8"/>
 				</textElement>
@@ -84,19 +84,19 @@
 				<reportElement x="50" y="1" width="470" height="4" forecolor="#000000" backcolor="#000000" uuid="67b97df7-693f-4c69-b8ef-8bad3a34b068"/>
 			</rectangle>
 			<textField isBlankWhenNull="true">
-				<reportElement x="133" y="12" width="161" height="20" uuid="6ddcf0cb-9940-4f64-8f62-c8b7eccd7c40"/>
-				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
+				<reportElement x="120" y="12" width="174" height="20" uuid="6ddcf0cb-9940-4f64-8f62-c8b7eccd7c40"/>
+				<textElement textAlignment="Left" verticalAlignment="Bottom"/>
 				<textFieldExpression><![CDATA[$P{zona}]]></textFieldExpression>
 			</textField>
 			<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
-				<reportElement x="299" y="13" width="132" height="19" uuid="97045056-bfd7-43e0-8f40-4dd1c0096101"/>
+				<reportElement x="328" y="13" width="103" height="19" uuid="97045056-bfd7-43e0-8f40-4dd1c0096101"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{fechaActa}]]></textFieldExpression>
 			</textField>
 			<textField pattern="h.mm a" isBlankWhenNull="true">
-				<reportElement x="430" y="13" width="90" height="19" uuid="ed771a81-509b-4ac5-8c13-d9b1486464ce"/>
+				<reportElement x="456" y="13" width="64" height="19" uuid="ed771a81-509b-4ac5-8c13-d9b1486464ce"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="false"/>
 				</textElement>
@@ -119,24 +119,6 @@
 			<rectangle>
 				<reportElement x="50" y="0" width="470" height="4" forecolor="#000000" backcolor="#000000" uuid="cb2ff748-1db1-4a89-af97-010c927c1f67"/>
 			</rectangle>
-			<staticText>
-				<reportElement x="69" y="14" width="430" height="20" forecolor="#000000" uuid="96edfd4a-7159-459a-9395-6aae73c02923"/>
-				<textElement>
-					<font size="8"/>
-				</textElement>
-				<text><![CDATA[Asociado(a) ____________________________________________________________(Cabeza de Plancha)]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="70" y="36" width="429" height="84" forecolor="#000000" uuid="f9d05f2a-e96f-4c06-bc1e-334f42531dae"/>
-				<textElement>
-					<font size="9"/>
-					<paragraph lineSpacing="1_1_2"/>
-				</textElement>
-				<text><![CDATA[La Comisión Electoral de la Zona Electoral No. __________ expide Resolución No. _____de Rechazo
-de la Plancha inscrita por el Asociado(a)________________________________________________
-identificado con cédula de ciudadanía Número _____________________________según consta en el Acta
-No.______ del mes de ___________________________________, por las siguientes razones]]></text>
-			</staticText>
 			<staticText>
 				<reportElement x="69" y="276" width="441" height="34" forecolor="#000000" uuid="d34fbe5d-9f41-4ee1-b587-31ef3325012c"/>
 				<textElement>
@@ -164,16 +146,6 @@ No.______ del mes de ___________________________________, por las siguientes raz
 			<line>
 				<reportElement x="316" y="336" width="184" height="1" forecolor="#000000" uuid="f91c67ee-ed5c-4be3-954b-a1aa7244ff9d"/>
 			</line>
-			<rectangle>
-				<reportElement x="-21" y="362" width="595" height="32" forecolor="#7D933C" backcolor="#7D933C" uuid="8aad28b9-31e4-48bf-87e7-4d5479bd3e45"/>
-			</rectangle>
-			<staticText>
-				<reportElement x="50" y="367" width="470" height="20" forecolor="#FFFFFF" uuid="9cd9d194-14ef-482e-aa23-0dab06c5194e"/>
-				<textElement textAlignment="Center">
-					<font size="14" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
-			</staticText>
 			<staticText>
 				<reportElement x="69" y="215" width="430" height="61" forecolor="#000000" uuid="94fdae10-7eb3-490c-a644-2e1f07a3b5c4"/>
 				<textElement>
@@ -183,19 +155,15 @@ No.______ del mes de ___________________________________, por las siguientes raz
 				<text><![CDATA[Contra la presente Resolución proceden los recursos de Reposición ante la Comisión Electoral y Apelación
 ante el Tribunal de Elecciones y Escrutinios, establecidos en el Código Electoral Resolución No. 390 del 27 de mayo de 2016 y en el Reglamento de Elecciones Resolución No. 391 del 27 de mayo de 2016.]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="118" y="12" width="261" height="20" uuid="ba834a5f-dcb6-4b26-bb25-e8bb22561d40"/>
-				<textFieldExpression><![CDATA[$P{nombre}]]></textFieldExpression>
-			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="395" y="36" width="35" height="14" uuid="cd48484a-d8a3-42d8-9fcb-bb183e38f4d5"/>
+				<reportElement x="395" y="50" width="63" height="14" uuid="cd48484a-d8a3-42d8-9fcb-bb183e38f4d5"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font size="8" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{resolucion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="225" y="50" width="244" height="20" uuid="f0994d56-3286-461a-aa62-af0d2048ad27"/>
+				<reportElement x="270" y="100" width="244" height="20" uuid="f0994d56-3286-461a-aa62-af0d2048ad27"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{nombre}]]></textFieldExpression>
 			</textField>
@@ -235,7 +203,7 @@ ante el Tribunal de Elecciones y Escrutinios, establecidos en el Código Elector
 				<textFieldExpression><![CDATA[$P{anio}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="254" y="36" width="51" height="20" uuid="3c032ef1-b22d-4f2d-a966-9f416cc21ad9"/>
+				<reportElement x="448" y="70" width="51" height="20" uuid="3c032ef1-b22d-4f2d-a966-9f416cc21ad9"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="8" isBold="true"/>
 				</textElement>
@@ -255,15 +223,33 @@ ante el Tribunal de Elecciones y Escrutinios, establecidos en el Código Elector
 				</textElement>
 				<textFieldExpression><![CDATA[$P{razones}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="70" y="8" width="431" height="31" uuid="3fb17f03-ae37-416f-bfe3-0b4ed73740e8"/>
+				<textFieldExpression><![CDATA["Asociado(a) " +$P{nombre}.toUpperCase( java.util.Locale )+ " (cabeza de Plancha)."]]></textFieldExpression>
+			</textField>
+		</band>
+	</detail>
+	<pageFooter>
+		<band height="57">
 			<staticText>
-				<reportElement x="50" y="394" width="100" height="20" forecolor="#000000" uuid="ecc8f096-934a-4205-90de-5b30cc1dd0ce"/>
-				<text><![CDATA[CO-FT-173]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="409" y="394" width="109" height="20" forecolor="#000000" uuid="d62b492e-6b86-4627-b494-eeddaffd0599"/>
+				<reportElement x="412" y="37" width="109" height="20" forecolor="#000000" uuid="d62b492e-6b86-4627-b494-eeddaffd0599"/>
 				<textElement textAlignment="Right"/>
 				<text><![CDATA[Mod.Agosto 2016]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="53" y="10" width="470" height="20" forecolor="#FFFFFF" uuid="9cd9d194-14ef-482e-aa23-0dab06c5194e"/>
+				<textElement textAlignment="Center">
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
+			</staticText>
+			<rectangle>
+				<reportElement x="-18" y="5" width="595" height="32" forecolor="#009933" backcolor="#009933" uuid="8aad28b9-31e4-48bf-87e7-4d5479bd3e45"/>
+			</rectangle>
+			<staticText>
+				<reportElement x="53" y="37" width="100" height="20" forecolor="#000000" uuid="ecc8f096-934a-4205-90de-5b30cc1dd0ce"/>
+				<text><![CDATA[CO-FT-173]]></text>
+			</staticText>
 		</band>
-	</detail>
+	</pageFooter>
 </jasperReport>
